packages/wix-ui-core/src/components/AddressInput/AddressInput.st.css
:import {
    -st-from: "../../baseComponents/InputWithOptions/InputWithOptions.st.css";
    -st-default: InputWithOptions;
}

.root {
    -st-extends: InputWithOptions;
}

.option {
    display: flex;
}

.iconWrapper {
    display: flex;
    align-items: center;
    padding: 0 6px;
}

.icon {

}

